--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -104,10 +104,13 @@ margin: auto 0;
 padding-right: 10px;
 }
 
-
+.home-navbar-link{
+    margin: auto 0;
+    text-decoration: none;
+}
 
 .home-body{
     width: 100%;
     height: 10000px;
-    background-color: white;
+    background-color: var(--background-color);
 }
