--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,13 +3,17 @@
     margin: 0;
 }
 :root{
-    --main-color:rgba(255, 41, 41, 0.897);
-    --background-color:linear-gradient(98.3deg, rgb(0, 0, 0) 10.6%, rgb(255, 0, 0) 97.7%);
+    --main-color:rgba(79, 79, 79, 0.452);
+    --background-color:linear-gradient(98.3deg, rgba(151, 89, 2, 0.765) 10.6%, rgb(172, 0, 0) 97.7%);
     --text-color:rgb(205, 205, 205);
     --button-color: rgb(255, 114, 114);
-    --back-color:rgb(255, 194, 194);
+    --back-color:rgba(255, 255, 255, 0.283);
+    --blur--color: rgba(79, 64, 96, 0.4);
 }
 
+body{
+    background-color: aliceblue;
+}
 
 .home-navbar{
     width: 100%;
@@ -37,13 +41,14 @@ margin: 0 10px;
     border: 0px;
     margin: 0 10px;
     margin: auto 0;
+    background-color: var(--back-color);
 }
 .home-navbar-left-submit{
 width: 40px;
 height: 40px;
 margin: 10px 5px;
 border-radius: 50%;
-border: 0.5px solid var(--button-color);
+border: 0.5px solid var(--back-color);
 background-color:var(--back-color) ;
 }
 .home-navbar-left-submit:hover{
@@ -102,6 +107,7 @@ margin: auto 10px;
 .home-navbar-right-user span{
 margin: auto 0;
 padding-right: 10px;
+color: white;
 }
 
 .home-navbar-link{
@@ -111,6 +117,25 @@ padding-right: 10px;
 
 .home-body{
     width: 100%;
-    height: 10000px;
-    background-color: var(--background-color);
+    padding-top: 65px;
+}
+.slider{
+    width: 1224px;
+    height: 360px;
+    margin: 0 auto;
+    position: relative;
+
+}
+.list{
+    width: 1224px;
+    height: 100%;
+    
+  
+}
+.slider img{
+    width: 1224px;
+    height: 100%;
+    border-radius: 20px;
+    display: block;
+    
 }
