--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -69,3 +69,18 @@ justify-content: space-around;
     border-radius: 20px;
     text-decoration: none;
 }
+
+
+@media only screen and (max-width: 1000px){
+    .main-login{
+        width: 350px;
+        height: 500px;
+        background-color: rgba(128, 128, 128, 0.358);
+        margin: 60px auto;
+        border-radius: 20px;
+        box-shadow: 5px 5px rgba(31, 31, 31, 0.619);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        }
+}
