--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -21,6 +21,7 @@ body{
     overflow: auto;
     overflow: -moz-scrollbars-none;
     -ms-overflow-style: none;
+    display: block;
 
 }
 
@@ -92,7 +93,7 @@ font-weight: 600;
 
 .footer{
     bottom: 0;
-    background-color: #2b1108;
+    background-color: #080b2b;
     width: 100%;
     height: 150px;
     display: flex;
@@ -130,3 +131,68 @@ justify-content: space-between
     color:var(--text-color);
     padding: 10px 10px;
 }
+
+@media only screen and (max-width: 1000px) {
+    .body{
+        background: var(--background-color);
+    }
+    .content-img{ 
+        width: 5%;
+        left: -300px;
+        transform: translate(300px,0);
+       animation:moveIcon 2s ;
+       width: 200px;
+    }
+    .text h1{
+        font-size: 40px;
+        padding-bottom: 10px;
+    }
+    .text h2{
+        font-size: 20px;
+        padding-bottom: 10px;
+    }
+    .text h3{
+        font-size: 10px;
+    }
+    .register-button{
+        width: 150px;
+        height: 40px;
+        text-align: center;
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        background-color:var(--button-color);
+        margin: 50px auto;
+        padding-top: 25px;
+        border: none;
+        border-radius: 30px;
+        font-size: large;
+        font-weight: 600;
+        }
+        
+        .footer{
+            bottom: 0;
+            background-color: #080b2b;
+            width: 100%;
+            height: 150px;
+            display: flex;
+            justify-content: space-around;
+            position:fixed;
+        }
+        .footer-context{
+            align-items: center;
+            flex: 1;
+        }
+        .footer-context li {
+            padding: 5px;
+            color:var(--text-color);
+            font-size: 10px;
+        }
+        .footer-img{
+           flex: 1;
+        }
+        .footer-image li {
+            color:var(--text-color);
+            padding: 10px 10px;
+            font-size: 10px;
+        }
+  }
