--- a/src/css/View.css
+++ b/src/css/View.css
@@ -1,6 +1,5 @@
 .view-navbar-back{
 margin: auto 10px;
-
 }
 .view-navbar-back-icon{
 width: 40px;
@@ -13,6 +12,7 @@ border-radius: 50%;
     flex-direction: column;
     background-color: var(--background-color);
 }
+
 .view-body-top{
     display: flex;
     padding: 20px 0;
@@ -83,9 +83,7 @@ cursor: pointer;
 }
 .view-body-right-item-info{
     display: flex;
-    flex-direction: column;
-
-  
+    flex-direction: column; 
 }
 .view-body-right-item-name{
 color: rgb(255, 255, 255);
@@ -97,9 +95,148 @@ font-size: large;
     color: antiquewhite;
     
 }
-
-
-
 .view-body-right{
     flex: 1;
+}
+
+
+
+@media only screen and (max-width: 1000px){
+
+    .view-navbar-back{
+        margin: auto 5px;
+        }
+        .view-navbar-back-icon{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        }
+        .home-navbar-left-search{
+            height: 10px;
+            padding:10px 20px 10px 10px;
+            border-radius: 20px;
+            border: 0px;
+            margin: 0 5px;
+            margin: auto 0;
+            background-color: var(--back-color);
+        }
+        .home-navbar-right{
+            display: flex;
+            padding:  0;
+        }
+        .home-navbar-right-user{
+            height: 30px;
+            display: flex;
+            border-radius: 30px;
+            border: 0.5px solid var(--main-color);
+            background-color: var(--back-color);
+            margin: 10px;
+            }
+            .home-navbar-right-user img{
+                width:20px;
+                height:20px;
+                margin: auto 0;
+                padding: 0 4px;
+            }
+            .home-navbar-right-user span{
+            margin: auto 0;
+            padding-right: 4px;
+            color: white;
+            font-size: 10px;
+            }
+
+
+            .view-body-top{
+                display: flex;
+                flex-direction: column;
+                padding: 20px 0;
+            }
+
+
+            .view-body-left{
+                display: flex;
+                flex-direction: column;
+            }
+            
+            .view-body-left-video{
+                width: 340px;
+                height: 200px;
+                border-radius: 20px;
+                margin: 0 auto;
+            }
+            .view-body-left-info{
+                display: flex;
+                flex-direction: column;
+            }
+            .view-body-left-info-top{
+                display: flex;
+                flex-direction: column;
+                padding: 10px 0;
+            }
+            .view-body-left-info-bot{
+                display: flex;
+            }
+            .view-body-left-info-bot img{
+                border: none;
+                width: 130px;
+                height: 195px;
+            }
+            .view-body-left-info h1{
+                color: rgb(255, 255, 255);
+                padding: 5px 0;
+                font-size: 20px;
+            }
+            .view-body-left-info h2{
+                color: rgb(255, 255, 255);
+                padding: 5px 0;
+                font-size: 13px;
+            }
+            
+            .view-body-left-info h3{
+                color: rgba(255, 255, 255, 0.653);
+                padding: 0 10px;
+                font-weight: 10;
+                font-size: 10px;
+    
+            }
+
+
+
+
+
+            .view-body-right{
+              padding-top: 30px;
+            }
+            .view-body-right-item{
+            width: 100%;
+            height: 100px;
+            margin: 10px 0;
+            display: flex;
+            }
+            .view-body-right-item:hover{
+            cursor: pointer;
+            }
+            .view-body-right-item-img{
+                width: 65px;
+                height: 100px;
+                padding: 0 20px;
+                padding-right: 10px;
+            
+            }
+            .view-body-right-item-info{
+                display: flex;
+                flex-direction: column; 
+            }
+            .view-body-right-item-name{
+            color: rgb(255, 255, 255);
+            font-size: 15px;
+            }
+            .view-body-right-item-mota{
+                overflow: hidden;
+                margin-top: 5px;
+                color: antiquewhite;
+                font-size: 10px;
+                
+            }
+
 }
