--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -134,6 +134,7 @@ justify-content: space-between
 
 @media only screen and (max-width: 1000px) {
     .body{
+        width: 100%;
         background: var(--background-color);
     }
     .content-img{ 
@@ -143,16 +144,26 @@ justify-content: space-between
        animation:moveIcon 2s ;
        width: 200px;
     }
+    .text{
+         color: var(--text-color);
+         display: flex;
+         flex-direction: column;
+         justify-content: space-around;
+         padding: 0;
+        }
     .text h1{
-        font-size: 40px;
+        font-size: 30px;
         padding-bottom: 10px;
+        padding-right: 10px;
     }
     .text h2{
-        font-size: 20px;
+        font-size: 15px;
         padding-bottom: 10px;
+        padding-right: 10px;
     }
     .text h3{
         font-size: 10px;
+        padding-right: 10px;
     }
     .register-button{
         width: 150px;
@@ -168,7 +179,7 @@ justify-content: space-between
         font-size: large;
         font-weight: 600;
         }
-        
+
         .footer{
             bottom: 0;
             background-color: #080b2b;
@@ -187,9 +198,7 @@ justify-content: space-between
             color:var(--text-color);
             font-size: 10px;
         }
-        .footer-img{
-           flex: 1;
-        }
+        
         .footer-image li {
             color:var(--text-color);
             padding: 10px 10px;
