--- a/src/css/View.css
+++ b/src/css/View.css
@@ -113,7 +113,8 @@ font-size: large;
         }
         .home-navbar-left-search{
             height: 10px;
-            padding:10px 20px 10px 10px;
+            width: 100px;
+            padding: 10px;
             border-radius: 20px;
             border: 0px;
             margin: 0 5px;
